. Code cleanup and optimization